# world_dispatcher

./: .aider.chat.history.md  .aider.input.history  Cargo.toml  README.md  ai.md  bench.sh  test.sh
.aider.tags.cache.v4/: cache.db  cache.db-shm  cache.db-wal
benches/: dispatcher.rs  system.rs  world.rs
examples/: function.rs  simple.rs
src/: dispatcher.rs  error.rs  lib.rs  resource.rs  system.rs  typeid.rs  world.rs
