[package]
name = "world_dispatcher"
version = "1.0.1"
authors = ["Joël Lupien (Jojolepro) <jojolepro@jojolepro.com>"]
edition = "2018"
description = "Provides the System part of a full ECS, along with a fast dispatcher and world container."
keywords = ["game", "ecs"]
categories = ["game-engines"]
license = "CC0"
exclude = ["doc"]
repository = "https://git.jojolepro.com/world_dispatcher/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
profiler = ["thread_profiler", "thread_profiler/thread_profiler"]
parallel = ["rayon"]
big_systems = []

[dependencies]
downcast-rs = "1.2"
rayon = { version = "1.4.0", optional = true }
thread_profiler = { version = "0.3.0", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
