[package]
name = "world_dispatcher"
version = "2.0.0"
authors = ["Anne Kitsune <annekitsunefox@gmail.com>"]
edition = "2024"
description = "Provides the System part of a full ECS, along with a fast dispatcher and world container."
keywords = ["game", "game-engines", "ecs"]
categories = ["game-engines"]
license = "AGPL-3.0-or-later"
exclude = ["doc"]
repository = "https://github.com/AnneKitsune/world_dispatcher/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
profiler = ["thread_profiler", "thread_profiler/thread_profiler"]
parallel = ["rayon"]
big_systems = []

[dependencies]
downcast-rs = "1.2"
rayon = { version = "1.4.0", optional = true }
thread_profiler = { version = "0.3.0", optional = true }
atomic_refcell_try = "0.2.0"

