[package]
name = "world_dispatcher"
version = "2.1.0"
authors = ["Anne Kitsune <annekitsunefox@gmail.com>"]
edition = "2024"
description = "Provides the System part of a full ECS, along with a fast dispatcher and world container."
keywords = ["game", "game-engines", "ecs"]
categories = ["game-engines"]
license = "AGPL-3.0-or-later"
exclude = ["doc"]
repository = "https://github.com/AnneKitsune/world_dispatcher/"

[features]
profiler = ["thread_profiler", "thread_profiler/thread_profiler"]
# Enables the parallel dispatcher.
parallel = ["rayon"]
# Enables conversion of bigger systems.
# Without `big_systems`, we can have up to 12 resources in a system.
# With `big_systems`, we can have up to 22 resources in a system.
big_systems = []

[dependencies]
downcast-rs = "2.0"
rayon = { version = "1.10.0", optional = true }
thread_profiler = { version = "0.3.0", optional = true }
atomic_refcell_try = "0.2.0"

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "dispatcher"
path = "benches/dispatcher.rs"
harness = false

[[bench]]
name = "system"
path = "benches/system.rs"
harness = false

[[bench]]
name = "world"
path = "benches/world.rs"
harness = false

